add a palavra na força

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Aprendendo a usar Git e GitHub</h1>
+    <h1>Aprendendo a usar Git e GitHub na força</h1>
     <script src="index.js"></script>
 </body>
 </html>
